# procurement-analyzer

./: .gitignore  error.txt
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml  pytest_output.txt
backend/app/: config.py  convex_client.py
backend/app/models/: schemas.py
backend/app/prompts/: aggregation.py  evaluation.py  extraction.py
backend/app/routers/: analyze.py  models.py
backend/app/services/: aggregation.py  chat.py  evaluator.py  exporter.py  extraction.py  llm.py  parser.py  pipeline.py  stream_store.py  zip_extractor.py
backend/tests/: test_chat.py  test_evaluator.py  test_exporter.py  test_extraction.py  test_llm.py
frontend/: tailwind.config.cjs
frontend/src/components/: AnalyzingView.tsx  AnimatedLogo.tsx  App.tsx  ChatPanel.tsx  CustomSelect.tsx  CyberIcons.tsx  ErrorBoundary.tsx  FileTypeLogos.tsx  FilesPanel.tsx  FoxIcons.tsx  HelpPanel.tsx  HistoryView.tsx  IconSidebar.tsx  ModelCarousel.tsx  ModelPanel.tsx  ProviderLogos.tsx  ResultsView.tsx  RightPanel.tsx  ScrollText.tsx  SettingsView.tsx  SourcesPanel.tsx  TopBar.tsx  UploadView.tsx
frontend/src/components/panels/: AnalyzingPanel.tsx  ResultsPanel.tsx  SectionModelSelector.tsx  TipsPanel.tsx  UploadPanel.tsx  panelHelpers.ts
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts  chatConfig.ts  store.ts  useFocusTrap.ts
frontend/src/styles/: global.css
