[project]
name = "procurement-analyzer-backend"
version = "0.1.0"
description = "Lithuanian public procurement document analyzer — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "python-multipart",
    "httpx",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "convex",
    "docling==2.73.0",
    "python-docx",
    "reportlab",
    "sse-starlette",
    "python-dotenv",
    "py7zr",
    "pypdf>=6.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
